// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid : Column should render as expected in its default state 1`] = `
<Column
  className=""
  colspan={1}
>
  <p>
    Hello World
  </p>
</Column>
`;

exports[`Grid : Column should render as expected in its default state 2`] = `"<div class=\\" css-50gl1w-responsiveGutters-columnStyles\\"><p>Hello World</p></div>"`;

exports[`Grid : Column should render as expected when colspan is provided 1`] = `
<Column
  className=""
  colspan={6}
>
  <p>
    Hello World
  </p>
</Column>
`;

exports[`Grid : Column should render as expected when colspan is provided 2`] = `"<div class=\\" css-b098i7-responsiveGutters-columnStyles\\"><p>Hello World</p></div>"`;

exports[`Grid : Column should render as expected when provided a colspan plus styling 1`] = `
<Column
  colspan={6}
  css="unknown styles"
>
  <p>
    Hello World
  </p>
</Column>
`;

exports[`Grid : Column should render as expected when provided a colspan plus styling 2`] = `"<div class=\\"css-11g1qlu-responsiveGutters-columnStyles-output\\"><p>Hello World</p></div>"`;

exports[`Grid : Column should throw an error if colspan value is greater than total number of columns 1`] = `
"<Column> cannot use a colspan prop that is 
          greater than the total number of columns in the grid (total 
            columns is 16, but received 32)."
`;
